update url of flags

--- a/src/scss/countrySelect.scss
+++ b/src/scss/countrySelect.scss
@@ -1,4 +1,4 @@
-$flags-img-file: "../../build/img/flags.png" !default;
+$flags-img-file: "/resources/images/flags.png" !default;
 
 .country-select {
 	position: relative;
