no flag for no country

--- a/src/scss/countrySelect.scss
+++ b/src/scss/countrySelect.scss
@@ -399,4 +399,5 @@ $flags-img-file: "/resources/images/flags.png" !default;
 	.ad{background-position:-208px -121px}
 	.np{background-position:-208px -132px}
 	.ch{background-position:-208px -143px}
+	.xx{background-position:-500px -500px}
 }
